# src/models/user.ts
@@ -1,0 +1,8 @@
+export class User {
+    id!: number;
+    firstName!: string;
+    lastName!: string;
+    email!: string;
+    createdAt!: Date;
+    updatedAt!: Date;
+}
