# src/routes/index.ts
@@ -1,6 +1,6 @@
 import express from 'express';
 import PingController from '../controllers/ping';
-
+import UserRouter from './user.router';
 const router = express.Router();
 
 router.get('/ping', async (_req, res) => {
@@ -8,5 +8,7 @@ router.get('/ping', async (_req, res) => {
     const response = await controller.getMessage();
     return res.send(response);
 });
+
+router.use('/users', UserRouter);
 
 export default router;
